Added service ref links for Toowoomba and Newcastle and new ABC (was ABC1) logo
Added abc_fv.png and removed abc1_fv.png to reflect rebranding of
ABC1 to ABC.

Renamed freshideastv.png to freshideastv_fv.png to conform to tagging
the names of the picons with their source (Freeview channels pages
in this case).

Removed wtv_fv.png as it has been renamed to westtv_fv.png.

--- a/picon/index.html
+++ b/picon/index.html
@@ -14,10 +14,10 @@
         <td><img src="channel_picons/7digital_fv.png"></td>
         <td><img src="channel_picons/7mate_fv.png"></td>
         <td><img src="channel_picons/7two_fv.png"></td>
-        <td><img src="channel_picons/abc1_fv.png"></td>
-      </tr><tr>
         <td><img src="channel_picons/abc2abc4_fv.png"></td>
+      </tr><tr>
         <td><img src="channel_picons/abc3_fv.png"></td>
+        <td><img src="channel_picons/abc_fv.png"></td>
         <td><img src="channel_picons/abcnews24_fv.png"></td>
         <td><img src="channel_picons/aspire_fv.png"></td>
         <td><img src="channel_picons/blank.png"></td>
@@ -26,7 +26,7 @@
         <td><img src="channel_picons/eleven_fv.png"></td>
         <td><img src="channel_picons/extra2_fv.png"></td>
         <td><img src="channel_picons/extra_fv.png"></td>
-        <td><img src="channel_picons/freshideastv.png"></td>
+        <td><img src="channel_picons/freshideastv_fv.png"></td>
         <td><img src="channel_picons/gem_fv.png"></td>
         <td><img src="channel_picons/go_fv.png"></td>
       </tr><tr>
@@ -56,10 +56,10 @@
         <td><img src="channel_picons/tv4me_fv.png"></td>
         <td><img src="channel_picons/tvs_fv.png"></td>
         <td><img src="channel_picons/tvsn_fv.png"></td>
-        <td><img src="channel_picons/win_fv.png"></td>
+        <td><img src="channel_picons/westtv_fv.png"></td>
       </tr><tr>
+        <td><img src="channel_picons/win_fv.png"></td>
         <td><img src="channel_picons/winten_fv.png"></td>
-        <td><img src="channel_picons/wtv_fv.png"></td>
       </tr>
   </tbody>
 </table></html>
