--- a/piconlcd/index.html
+++ b/piconlcd/index.html
@@ -17,47 +17,53 @@
   </tr><tr>
     <td><img src="channel_picons/abc3_fv.png"></td>
     <td><img src="channel_picons/abc_fv.png"></td>
+    <td><img src="channel_picons/abcjazz.png"></td>
     <td><img src="channel_picons/abcnews24_fv.png"></td>
     <td><img src="channel_picons/aspire_fv.png"></td>
     <td><img src="channel_picons/blank.png"></td>
-    <td><img src="channel_picons/c31_fv.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/c31_fv.png"></td>
+    <td><img src="channel_picons/doublej.png"></td>
     <td><img src="channel_picons/eleven_fv.png"></td>
     <td><img src="channel_picons/extra2_fv.png"></td>
     <td><img src="channel_picons/extra_fv.png"></td>
     <td><img src="channel_picons/freshideastv_fv.png"></td>
+  </tr><tr>
     <td><img src="channel_picons/gem_fv.png"></td>
     <td><img src="channel_picons/go_fv.png"></td>
-  </tr><tr>
     <td><img src="channel_picons/gold2_nine.png"></td>
     <td><img src="channel_picons/gold_nine.png"></td>
     <td><img src="channel_picons/gwn_fv.png"></td>
     <td><img src="channel_picons/ishoptv_fv.png"></td>
+  </tr><tr>
     <td><img src="channel_picons/nbn_fv.png"></td>
     <td><img src="channel_picons/nine_fv.png"></td>
-  </tr><tr>
     <td><img src="channel_picons/nitv_fv.png"></td>
     <td><img src="channel_picons/one_fv.png"></td>
     <td><img src="channel_picons/prime7_fv.png"></td>
     <td><img src="channel_picons/sbsgeneric_sbs.png"></td>
+  </tr><tr>
     <td><img src="channel_picons/sbshd_fv.png"></td>
     <td><img src="channel_picons/sbsone_fv.png"></td>
-  </tr><tr>
+    <td><img src="channel_picons/sbsradio1.png"></td>
+    <td><img src="channel_picons/sbsradio2.png"></td>
+    <td><img src="channel_picons/sbsradio3.png"></td>
     <td><img src="channel_picons/sbstwo_fv.png"></td>
+  </tr><tr>
     <td><img src="channel_picons/sc10_fv.png"></td>
     <td><img src="channel_picons/sctvtas_fv.png"></td>
     <td><img src="channel_picons/spreetv_fv.png"></td>
     <td><img src="channel_picons/tdt_fv.png"></td>
     <td><img src="channel_picons/tendarwin_fv.png"></td>
-  </tr><tr>
     <td><img src="channel_picons/tendigital_fv.png"></td>
+  </tr><tr>
     <td><img src="channel_picons/tenmildura_fv.png"></td>
     <td><img src="channel_picons/tv4me_fv.png"></td>
     <td><img src="channel_picons/tvs_fv.png"></td>
     <td><img src="channel_picons/tvsn_fv.png"></td>
     <td><img src="channel_picons/westtv_fv.png"></td>
-  </tr><tr>
     <td><img src="channel_picons/win_fv.png"></td>
+  </tr><tr>
     <td><img src="channel_picons/winten_fv.png"></td>
   </tr>
   </tbody>
