--- a/picon/index.html
+++ b/picon/index.html
@@ -11,63 +11,66 @@
     <td><img src="channel_picons/31digital_fv.png"></td>
     <td><img src="channel_picons/44adelaide_fv.png"></td>
     <td><img src="channel_picons/7digital_fv.png"></td>
+    <td><img src="channel_picons/7flix_lw.png"></td>
     <td><img src="channel_picons/7mate_fv.png"></td>
     <td><img src="channel_picons/7two_fv.png"></td>
-    <td><img src="channel_picons/9gem_lw.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/9gem_lw.png"></td>
     <td><img src="channel_picons/9go_lw.png"></td>
     <td><img src="channel_picons/9hd_wp.png"></td>
     <td><img src="channel_picons/9life_wp.png"></td>
     <td><img src="channel_picons/abc2kids_fv.png"></td>
     <td><img src="channel_picons/abc3_fv.png"></td>
-    <td><img src="channel_picons/abc_fv.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/abc_fv.png"></td>
     <td><img src="channel_picons/abcjazz.png"></td>
     <td><img src="channel_picons/abcnews24_fv.png"></td>
     <td><img src="channel_picons/aspire_fv.png"></td>
     <td><img src="channel_picons/blank.png"></td>
     <td><img src="channel_picons/c31_fv.png"></td>
-    <td><img src="channel_picons/channel9_wp.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/channel9_wp.png"></td>
     <td><img src="channel_picons/doublej.png"></td>
     <td><img src="channel_picons/eleven_fv.png"></td>
     <td><img src="channel_picons/extra2_fv.png"></td>
     <td><img src="channel_picons/extra_wp.png"></td>
     <td><img src="channel_picons/foodnetwork_wp.png"></td>
-    <td><img src="channel_picons/gem_fv.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/gem_fv.png"></td>
     <td><img src="channel_picons/go_fv.png"></td>
     <td><img src="channel_picons/gold_nine.png"></td>
     <td><img src="channel_picons/gwn_fv.png"></td>
     <td><img src="channel_picons/hdmi_in.png"></td>
     <td><img src="channel_picons/ishoptv_fv.png"></td>
-    <td><img src="channel_picons/nbn_fv.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/nbn_fv.png"></td>
     <td><img src="channel_picons/nitv_fv.png"></td>
     <td><img src="channel_picons/one_fv.png"></td>
     <td><img src="channel_picons/prime7_fv.png"></td>
     <td><img src="channel_picons/racingcom.png"></td>
     <td><img src="channel_picons/sbshd_lw.png"></td>
-    <td><img src="channel_picons/sbsone_lw.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/sbsone_lw.png"></td>
     <td><img src="channel_picons/sbsradio1.png"></td>
     <td><img src="channel_picons/sbsradio2.png"></td>
     <td><img src="channel_picons/sbsradio3.png"></td>
     <td><img src="channel_picons/sbstwo_lw.png"></td>
     <td><img src="channel_picons/sc10_fv.png"></td>
-    <td><img src="channel_picons/scgtsbkn_fv.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/scgtsbkn_fv.png"></td>
     <td><img src="channel_picons/sctvtas_fv.png"></td>
     <td><img src="channel_picons/spreetv_fv.png"></td>
     <td><img src="channel_picons/tdt_fv.png"></td>
     <td><img src="channel_picons/tendarwin_fv.png"></td>
     <td><img src="channel_picons/tendigital_fv.png"></td>
-    <td><img src="channel_picons/tenmildura_fv.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/tenhd_lw.png"></td>
+    <td><img src="channel_picons/tenmildura_fv.png"></td>
     <td><img src="channel_picons/tv4me_fv.png"></td>
     <td><img src="channel_picons/tvs_fv.png"></td>
     <td><img src="channel_picons/tvsn_lw.png"></td>
     <td><img src="channel_picons/westtv_fv.png"></td>
+  </tr><tr>
     <td><img src="channel_picons/win_fv.png"></td>
     <td><img src="channel_picons/winten_fv.png"></td>
   </tr>
