Update NBN and NITV picon files
New station logos. Reworked masked originals thanks to IanSav.

--- a/picon/index.html
+++ b/picon/index.html
@@ -43,8 +43,8 @@
     <td><img src="channel_picons/hdmi_in.png"></td>
     <td><img src="channel_picons/ishoptv_fv.png"></td>
   </tr><tr>
-    <td><img src="channel_picons/nbn_fv.png"></td>
-    <td><img src="channel_picons/nitv_fv.png"></td>
+    <td><img src="channel_picons/nbn_lw.png"></td>
+    <td><img src="channel_picons/nitv_lw.png"></td>
     <td><img src="channel_picons/one_fv.png"></td>
     <td><img src="channel_picons/prime7_fv.png"></td>
     <td><img src="channel_picons/racingcom.png"></td>
