--- a/piconlcd/index.html
+++ b/piconlcd/index.html
@@ -22,9 +22,9 @@
     <td><img src="channel_picons/9life_wp.png"></td>
     <td><img src="channel_picons/abc2kids_fv.png"></td>
   </tr><tr>
-    <td><img src="channel_picons/abc3_fv.png"></td>
     <td><img src="channel_picons/abc_fv.png"></td>
     <td><img src="channel_picons/abcjazz.png"></td>
+    <td><img src="channel_picons/abcme_lw.png"></td>
     <td><img src="channel_picons/abcnews24_fv.png"></td>
     <td><img src="channel_picons/aspire_fv.png"></td>
     <td><img src="channel_picons/blank.png"></td>
