Improved LCD picon for ABC
Better match to the new ABC HD picon.

--- a/piconlcd/index.html
+++ b/piconlcd/index.html
@@ -22,7 +22,7 @@
     <td><img src="channel_picons/9life_wp.png"></td>
     <td><img src="channel_picons/abc2kids_fv.png"></td>
   </tr><tr>
-    <td><img src="channel_picons/abc_fv.png"></td>
+    <td><img src="channel_picons/abc_lw.png"></td>
     <td><img src="channel_picons/abchd_lw.png"></td>
     <td><img src="channel_picons/abcjazz.png"></td>
     <td><img src="channel_picons/abcme_lw.png"></td>
