Southern Cross updates
Add new picon for SC 60/HD Launceston.

Update other picons for SC to ones suited to dark backgrounds.

--- a/piconlcd/index.html
+++ b/piconlcd/index.html
@@ -62,22 +62,23 @@
     <td><img src="channel_picons/sbsradio3.png"></td>
     <td><img src="channel_picons/sbsviceland_mp.png"></td>
     <td><img src="channel_picons/sbsvicelandhd_mp.png"></td>
-    <td><img src="channel_picons/sc10_fv.png"></td>
+    <td><img src="channel_picons/sc10_mp.png"></td>
   </tr><tr>
-    <td><img src="channel_picons/scgtsbkn_fv.png"></td>
-    <td><img src="channel_picons/sctvtas_fv.png"></td>
+    <td><img src="channel_picons/scgtsbkn_mp.png"></td>
+    <td><img src="channel_picons/sctvhd_mp.png"></td>
+    <td><img src="channel_picons/sctvtas_mp.png"></td>
     <td><img src="channel_picons/spreetv_fv.png"></td>
     <td><img src="channel_picons/tendarwin_fv.png"></td>
     <td><img src="channel_picons/tendigital_lw.png"></td>
-    <td><img src="channel_picons/tenhd_lw.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/tenhd_lw.png"></td>
     <td><img src="channel_picons/tenmildura_fv.png"></td>
     <td><img src="channel_picons/tv4me_fv.png"></td>
     <td><img src="channel_picons/tvsn_mp.png"></td>
     <td><img src="channel_picons/westtv_fv.png"></td>
     <td><img src="channel_picons/win_mp.png"></td>
-    <td><img src="channel_picons/winhd_mp.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/winhd_mp.png"></td>
     <td><img src="channel_picons/winnetwork_fv.png"></td>
     <td><img src="channel_picons/winten_fv.png"></td>
   </tr>
