Replace Extra picon links with Your Money picon links
Also add Your Money picon file and and remove the Extra picon file.

--- a/picon/index.html
+++ b/picon/index.html
@@ -34,53 +34,53 @@
     <td><img src="channel_picons/channel9_wp.png"></td>
     <td><img src="channel_picons/doublej.png"></td>
     <td><img src="channel_picons/eleven_fv.png"></td>
-    <td><img src="channel_picons/extra_wp.png"></td>
-  </tr><tr>
     <td><img src="channel_picons/foodnetwork_lw.png"></td>
+  </tr><tr>
     <td><img src="channel_picons/gold_nine.png"></td>
     <td><img src="channel_picons/gwn_fv.png"></td>
     <td><img src="channel_picons/hdmi_in.png"></td>
     <td><img src="channel_picons/ishoptv_fv.png"></td>
     <td><img src="channel_picons/nbn_lw.png"></td>
-  </tr><tr>
     <td><img src="channel_picons/nitv_lw.png"></td>
+  </tr><tr>
     <td><img src="channel_picons/one_fv.png"></td>
     <td><img src="channel_picons/prime7_mp.png"></td>
     <td><img src="channel_picons/prime7hd_mp.png"></td>
     <td><img src="channel_picons/racingcom_wp.png"></td>
     <td><img src="channel_picons/sbn_mp.png"></td>
-  </tr><tr>
     <td><img src="channel_picons/sbsarabic24_mp.png"></td>
+  </tr><tr>
     <td><img src="channel_picons/sbschill_mp.png"></td>
     <td><img src="channel_picons/sbsone_lw.png"></td>
     <td><img src="channel_picons/sbsonehd_lw.png"></td>
     <td><img src="channel_picons/sbspopasia_mp.png"></td>
     <td><img src="channel_picons/sbspopdesi_mp.png"></td>
-  </tr><tr>
     <td><img src="channel_picons/sbsradio1.png"></td>
+  </tr><tr>
     <td><img src="channel_picons/sbsradio2.png"></td>
     <td><img src="channel_picons/sbsradio3.png"></td>
     <td><img src="channel_picons/sbsviceland_lw.png"></td>
     <td><img src="channel_picons/sbsvicelandhd_mp.png"></td>
     <td><img src="channel_picons/sc10_mp.png"></td>
-  </tr><tr>
     <td><img src="channel_picons/scgtsbkn_mp.png"></td>
+  </tr><tr>
     <td><img src="channel_picons/sctvhd_mp.png"></td>
     <td><img src="channel_picons/sctvtas_mp.png"></td>
     <td><img src="channel_picons/skynewsonwin_mp.png"></td>
     <td><img src="channel_picons/spreetv_fv.png"></td>
     <td><img src="channel_picons/tendarwin_fv.png"></td>
-  </tr><tr>
     <td><img src="channel_picons/tendigital_lw.png"></td>
+  </tr><tr>
     <td><img src="channel_picons/tenhd_lw.png"></td>
     <td><img src="channel_picons/tenmildura_fv.png"></td>
     <td><img src="channel_picons/tv4me_fv.png"></td>
     <td><img src="channel_picons/tvsn_mp.png"></td>
     <td><img src="channel_picons/westtv_fv.png"></td>
-  </tr><tr>
     <td><img src="channel_picons/win_mp.png"></td>
+  </tr><tr>
     <td><img src="channel_picons/winhd_mp.png"></td>
     <td><img src="channel_picons/winten_fv.png"></td>
+    <td><img src="channel_picons/yourmoney_mp.png"></td>
   </tr>
   </tbody>
 </table></body></html>
