--- a/piconlcd/index.html
+++ b/piconlcd/index.html
@@ -36,7 +36,7 @@
     <td><img src="channel_picons/abcnews_mp.png"></td>
     <td><img src="channel_picons/aspire_fv.png"></td>
   </tr><tr>
-    <td><img src="channel_picons/c31_fv.png"></td>
+    <td><img src="channel_picons/c31_mp.png"></td>
     <td><img src="channel_picons/channel9_wp.png"></td>
     <td><img src="channel_picons/doublej_mp.png"></td>
     <td><img src="channel_picons/gold_mp.png"></td>
