New picons for ABC, ABC HD and ABC News
Update picons for ABC & ABC HD to the new Jan 2021 picons.

Change the ABC News screen picon to the stacked version for a better
fit.  This isn't a new picon style. The T4 front panel oicon is
unchanged.

This also removes a few remappings where picon links with service type
0xA were being duplicated with service type 0x1.

--- a/picon/index.html
+++ b/picon/index.html
@@ -41,13 +41,13 @@
     <td><img src="channel_picons/abckidstvplus_lw.png"></td>
     <td><img src="channel_picons/abcme_lw.png"></td>
     <td><img src="channel_picons/abcmelbourne_mp.png"></td>
-    <td><img src="channel_picons/abcnews_mp.png"></td>
+    <td><img src="channel_picons/abcnews_lw.png"></td>
   </tr><tr>
     <td><img src="channel_picons/abcnewsradio_mp.png"></td>
     <td><img src="channel_picons/abcperth_mp.png"></td>
     <td><img src="channel_picons/abcrn_mp.png"></td>
     <td><img src="channel_picons/abcsydney_mp.png"></td>
-    <td><img src="channel_picons/abctv_fv.png"></td>
+    <td><img src="channel_picons/abctv_lw.png"></td>
     <td><img src="channel_picons/abctvhd_lw.png"></td>
   </tr><tr>
     <td><img src="channel_picons/aspire_fv.png"></td>
