--- a/piconlcd/index.html
+++ b/piconlcd/index.html
@@ -64,7 +64,7 @@
     <td><img src="channel_picons/ishoptv_fv.png"></td>
     <td><img src="channel_picons/nbn_lw.png"></td>
   </tr><tr>
-    <td><img src="channel_picons/nitv_lw.png"></td>
+    <td><img src="channel_picons/nitv_sbs.png"></td>
     <td><img src="channel_picons/openshop_mp.png"></td>
     <td><img src="channel_picons/prime7_mp.png"></td>
     <td><img src="channel_picons/prime7hd_mp.png"></td>
