Change SpreeTV to Gecko
In metro areas LCN 17 has changed from SpreeTV to Gecko.

Add the new Gecko picon image files, remove the old SpreeTV ones
and change the picon links for the LCN to point to the new Gecko
image files.

--- a/piconlcd/index.html
+++ b/piconlcd/index.html
@@ -58,36 +58,36 @@
     <td><img src="channel_picons/doublej_mp.png"></td>
   </tr><tr>
     <td><img src="channel_picons/extra_wp.png"></td>
+    <td><img src="channel_picons/gecko_fv.png"></td>
     <td><img src="channel_picons/gold_mp.png"></td>
     <td><img src="channel_picons/hdmi_in_wp.png"></td>
     <td><img src="channel_picons/imparja_lw.png"></td>
     <td><img src="channel_picons/ishoptv_fv.png"></td>
-    <td><img src="channel_picons/nbn_lw.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/nbn_lw.png"></td>
     <td><img src="channel_picons/nitv_sbs.png"></td>
     <td><img src="channel_picons/openshop_mp.png"></td>
     <td><img src="channel_picons/racingcom_rc.png"></td>
     <td><img src="channel_picons/sbn_mp.png"></td>
     <td><img src="channel_picons/sbsarabic24_mp.png"></td>
-    <td><img src="channel_picons/sbschill_mp.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/sbschill_mp.png"></td>
     <td><img src="channel_picons/sbsfood_mp.png"></td>
     <td><img src="channel_picons/sbsone_mp.png"></td>
     <td><img src="channel_picons/sbsonehd_mp.png"></td>
     <td><img src="channel_picons/sbspopasia_mp.png"></td>
     <td><img src="channel_picons/sbspopdesi_mp.png"></td>
-    <td><img src="channel_picons/sbsradio1_mp.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/sbsradio1_mp.png"></td>
     <td><img src="channel_picons/sbsradio2_mp.png"></td>
     <td><img src="channel_picons/sbsradio3_mp.png"></td>
     <td><img src="channel_picons/sbsvicelandhd_mp.png"></td>
     <td><img src="channel_picons/sbsworldmovies_lw.png"></td>
     <td><img src="channel_picons/sbsworldwatch_lw.png"></td>
-    <td><img src="channel_picons/sctvtas_mp.png"></td>
   </tr><tr>
+    <td><img src="channel_picons/sctvtas_mp.png"></td>
     <td><img src="channel_picons/skynewsonwin_mp.png"></td>
     <td><img src="channel_picons/skynewsregional_mp.png"></td>
-    <td><img src="channel_picons/spreetv_fv.png"></td>
     <td><img src="channel_picons/triplej_mp.png"></td>
     <td><img src="channel_picons/triplejunearthed_mp.png"></td>
     <td><img src="channel_picons/tvsn_mp.png"></td>
